Use LangChain for vector search

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-We need agent-os to give the system guide rails. 
-# .agent-os
-
-
-# Dont show local Environment Variables
+# Environment-specific files
 .env
 .claude
 .cursor
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Node.js dependencies
+node_modules/
