--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# .gitignore
+# Lists files that Git should ignore in this repo.
+# Not for project feature notes.
+
 # Environment-specific files
 .env
 
@@ -11,3 +15,6 @@ __pycache__/
 
 # Node.js dependencies
 node_modules/
+
+# Next.js build output
+.next/
