--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,6 +1,5 @@
 # .github/workflows/compile.yml
-# This workflow performs build checks for the RAG Application
-# Push triggers basic checks on all branches, PR triggers comprehensive checks on main/develop/staging
+# Fast checks for pushes, comprehensive checks for PRs targeting main branches
 
 name: Build Checks
 
@@ -14,54 +13,45 @@ env:
   PYTHON_VERSION: '3.11'
 
 jobs:
-  # Basic checks for push events
-  quick-check:
+  # Fast syntax checks for all pushes
+  fast-check:
+    name: Fast Syntax Check
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
 
-      # Backend basic check
+      # Python syntax validation only
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: Cache Python dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - name: Install backend dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
-      - name: Validate backend syntax
+      - name: Check Python syntax
         run: python -m py_compile backend/app.py
 
-      # Frontend basic build
+      # TypeScript compilation check only
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-      - name: Install frontend dependencies
-        run: npm ci
+      - name: Install pnpm
+        run: npm install -g pnpm
+      - name: Install minimal frontend dependencies
+        run: pnpm install --frozen-lockfile --ignore-scripts
         working-directory: frontend
-      - name: Build frontend
-        run: npm run build
+      - name: Check TypeScript compilation
+        run: pnpm exec tsc --noEmit
         working-directory: frontend
 
-  # Comprehensive checks for pull requests
+  # Comprehensive checks for PRs to main branches
   comprehensive-check:
+    name: Comprehensive Check
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
 
-      # Backend comprehensive checks
+      # Full Python validation
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -73,33 +63,35 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - name: Install backend dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
-      - name: Validate backend syntax
+      - name: Check Python syntax
         run: python -m py_compile backend/app.py
-      - name: Check backend imports
-        run: python -c "import backend.app; print('Backend imports successful')"
+      - name: Validate Python imports
+        run: python -c "import backend.app; print('✅ Python imports successful')"
 
-      # Frontend comprehensive checks
+      # Full frontend validation
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache: 'pnpm'
+          cache-dependency-path: frontend/pnpm-lock.yaml
+      - name: Install pnpm
+        run: npm install -g pnpm
       - name: Install frontend dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
         working-directory: frontend
       - name: Run frontend linting
-        run: npm run lint
+        run: pnpm lint
         working-directory: frontend
       - name: Check TypeScript types
-        run: npx tsc --noEmit
+        run: pnpm exec tsc --noEmit
         working-directory: frontend
       - name: Build frontend
-        run: npm run build
+        run: pnpm build
         working-directory: frontend
       - name: Verify build output
         run: ls -la .next
