--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,15 @@
 # .devcontainer/Dockerfile
-# Builds an image with Python and Node for full-stack testing.
+# Builds an image with Python and Node matching CI environment.
 # Not intended for production deployment.
 
 FROM python:3.11-slim
 
-# Install curl and gnupg required for NodeSource setup
+# Install curl, gnupg, and git required for NodeSource setup and pnpm
 RUN apt-get update \
-    && apt-get install -y curl gnupg \
-    && curl -fsSL https://deb.nodesource.com/setup_18.x | bash - \
+    && apt-get install -y curl gnupg git \
+    && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs \
+    && npm install -g pnpm \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
