--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 // .devcontainer/devcontainer.json
-// Configures a dev container that runs frontend and backend for testing.
+// Configures a dev container matching CI environment for consistent development.
 // Not used for production environments.
 {
   "name": "rag-app-dev",
@@ -7,6 +7,33 @@
     "dockerfile": "Dockerfile"
   },
   "forwardPorts": [3000, 8000],
-  "postCreateCommand": "pip install -r backend/requirements.txt",
-  "postStartCommand": "sh -c 'uvicorn backend.app:app --host 0.0.0.0 --port 8000 & python -m http.server 3000 --directory frontend &'"
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  },
+  "postCreateCommand": [
+    "echo '🚀 Setting up development environment...'",
+    "pip install -r backend/requirements.txt",
+    "cd frontend && pnpm install --frozen-lockfile",
+    "echo '✅ Environment setup complete!'"
+  ],
+  "postStartCommand": "echo '🎯 Ready to develop! Backend: http://localhost:8000, Frontend: http://localhost:3000'",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-python.python",
+        "ms-python.black-formatter",
+        "bradlc.vscode-tailwindcss",
+        "esbenp.prettier-vscode",
+        "ms-vscode.vscode-typescript-next"
+      ],
+      "settings": {
+        "python.defaultInterpreterPath": "python3",
+        "typescript.preferences.importModuleSpecifier": "relative",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+          "source.fixAll.eslint": "explicit"
+        }
+      }
+    }
+  }
 }
